--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  url_launcher: ^0.4.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
